--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   
-    <title>404 Page not found :: kayfab.me</title>
+    <title>404 Page not found :: Kay is a writer, actor, activist, and engineer</title>
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,7 +41,7 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="" />
 <meta property="og:url" content="//localhost:1313/404.html" />
-<meta property="og:site_name" content="kayfab.me" />
+<meta property="og:site_name" content="Kay is a writer, actor, activist, and engineer" />
 
   <meta property="og:image" content="//localhost:1313/og-image.png">
 
@@ -153,7 +153,12 @@
 
 
 
-<script type="text/javascript" src="/bundle.min.js"></script>
+
+
+
+
+<script type="text/javascript" src="/lib.min.js"></script>
+<script type="text/javascript" src="/bundle.js"></script>
 
 
 
